results/SVCOMP/2-shot/log-boolean2-2024_03_18_23_53_02.txt
import java.util.Random;

public class boolean2 {
    //@ ensures \result == !b;
    public static boolean f(boolean b) {
        return !b;
    }

    //@ ensures \result == !b;
    public static boolean fun() {
        boolean b = new Random().nextBoolean();
        boolean result = f(b);
        return result == !b;
    }
}
/home/max/Documents/JMLGPT/tmp/boolean2.java:9: error: cannot find symbol
    //@ ensures \result == !b;
                            ^
  symbol:   variable b
  location: class boolean2
1 error

